--- a/recipe_win.ui
+++ b/recipe_win.ui
@@ -1,28 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>recipe_win</class>
- <widget class="QMainWindow" name="recipe_win">
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>852</width>
-    <height>612</height>
+    <width>812</width>
+    <height>689</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Add Recipe</string>
   </property>
-  <property name="windowIcon">
-   <iconset>
-    <normaloff>icon.png</normaloff>icon.png</iconset>
-  </property>
   <widget class="QWidget" name="centralwidget">
+   <widget class="QLineEdit" name="recipe_lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>40</y>
+      <width>301</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Light</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+    background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
+    
+    border: qlineargradient(spread: repeat, 
+                            x1: 0, y1: 0.602, x2: 1, y2: 0.597, 
+                            stop: 0.0631579 rgba(0, 115, 168, 216), 
+                            stop: 0.752632 rgba(25, 116, 159, 199), 
+                            stop: 0.994737 rgba(49, 118, 150, 0)); 
+    
+    border-radius: 15px;
+    padding-left: 10px;
+    color: white;  
+}</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="cancel_pb">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>510</y>
+      <x>80</x>
+      <y>540</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -78,12 +105,12 @@ QPushButton:pressed {
      <string>Cancel</string>
     </property>
    </widget>
-   <widget class="QLabel" name="price_label">
+   <widget class="QLabel" name="name_label">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>100</y>
-      <width>141</width>
+      <x>80</x>
+      <y>180</y>
+      <width>421</width>
       <height>31</height>
      </rect>
     </property>
@@ -91,38 +118,90 @@ QPushButton:pressed {
      <font>
       <family>Segoe UI Variable Display Semil</family>
       <pointsize>14</pointsize>
-      <underline>true</underline>
+      <underline>false</underline>
      </font>
     </property>
     <property name="text">
-     <string>Price(₹) : </string>
+     <string>Raw Material</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_1">
+   <widget class="QLineEdit" name="quant_lineEdit">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>450</y>
-      <width>141</width>
+      <x>640</x>
+      <y>480</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Light</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+    background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
+    
+    border: qlineargradient(spread: repeat, 
+                            x1: 0, y1: 0.602, x2: 1, y2: 0.597, 
+                            stop: 0.0631579 rgba(0, 115, 168, 216), 
+                            stop: 0.752632 rgba(25, 116, 159, 199), 
+                            stop: 0.994737 rgba(49, 118, 150, 0)); 
+    
+    border-radius: 15px;
+    padding-left: 10px;
+    color: white;  
+}</string>
+    </property>
+   </widget>
+   <widget class="QListView" name="rm_list">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>210</y>
+      <width>421</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListView {
+    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
+    border: 2px solid rgb(78, 114, 130);
+    border-radius: 10px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Quant_label_1">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>180</y>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Segoe UI Variable Display Semil</family>
-      <pointsize>12</pointsize>
-      <underline>true</underline>
+      <pointsize>14</pointsize>
+      <underline>false</underline>
      </font>
     </property>
     <property name="text">
-     <string>Raw material :</string>
+     <string>Quantity(in kg/L) : </string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="recipe_lineEdit">
+   <widget class="QLineEdit" name="price_lineEdit">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>10</y>
+      <x>320</x>
+      <y>140</y>
       <width>301</width>
       <height>31</height>
      </rect>
@@ -149,11 +228,168 @@ QPushButton:pressed {
 }</string>
     </property>
    </widget>
+   <widget class="QListView" name="quant_list">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>210</y>
+      <width>171</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListView {
+    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
+    border: 2px solid rgb(78, 114, 130);
+    border-radius: 10px;
+}
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="price_label">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>130</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Price(₹) : </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="recipe_label">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>40</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Recipe Name : </string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="type_comboBox">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>90</y>
+      <width>301</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semib</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QComboBox {
+    background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
+    
+    border: qlineargradient(spread: repeat, 
+                            x1: 0, y1: 0.602, x2: 1, y2: 0.597, 
+                            stop: 0.0631579 rgba(0, 115, 168, 216), 
+                            stop: 0.752632 rgba(25, 116, 159, 199), 
+                            stop: 0.994737 rgba(49, 118, 150, 0)); 
+    
+    border-radius: 15px;
+    padding-left: 10px;
+    color: white;  
+}</string>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <item>
+     <property name="text">
+      <string>Appetizers </string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string> Main Courses</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Side Dishes</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Beverages </string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="type_label">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>90</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Type</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_1">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>480</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>12</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Raw material :</string>
+    </property>
+   </widget>
    <widget class="QPushButton" name="add_recipe_pb">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>510</y>
+      <x>570</x>
+      <y>540</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -209,177 +445,11 @@ QPushButton:pressed {
      <string>Add Recipe</string>
     </property>
    </widget>
-   <widget class="QLabel" name="recipe_label">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>10</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Display Semil</family>
-      <pointsize>14</pointsize>
-      <underline>true</underline>
-     </font>
-    </property>
-    <property name="text">
-     <string>Recipe Name : </string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="price_lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>110</y>
-      <width>301</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Small Light</family>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit {
-    background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
-    
-    border: qlineargradient(spread: repeat, 
-                            x1: 0, y1: 0.602, x2: 1, y2: 0.597, 
-                            stop: 0.0631579 rgba(0, 115, 168, 216), 
-                            stop: 0.752632 rgba(25, 116, 159, 199), 
-                            stop: 0.994737 rgba(49, 118, 150, 0)); 
-    
-    border-radius: 15px;
-    padding-left: 10px;
-    color: white;  
-}</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="type_label">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>60</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Display Semil</family>
-      <pointsize>14</pointsize>
-      <underline>true</underline>
-     </font>
-    </property>
-    <property name="text">
-     <string>Type</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="type_comboBox">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>60</y>
-      <width>301</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Display Semib</family>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QComboBox {
-    background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
-    
-    border: qlineargradient(spread: repeat, 
-                            x1: 0, y1: 0.602, x2: 1, y2: 0.597, 
-                            stop: 0.0631579 rgba(0, 115, 168, 216), 
-                            stop: 0.752632 rgba(25, 116, 159, 199), 
-                            stop: 0.994737 rgba(49, 118, 150, 0)); 
-    
-    border-radius: 15px;
-    padding-left: 10px;
-    color: white;  
-}</string>
-    </property>
-    <property name="currentIndex">
-     <number>0</number>
-    </property>
-    <item>
-     <property name="text">
-      <string>Appetizers </string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string> Main Courses</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Side Dishes</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Beverages </string>
-     </property>
-    </item>
-   </widget>
-   <widget class="QListView" name="rm_list">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>180</y>
-      <width>421</width>
-      <height>241</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QListView {
-    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
-    border: 2px solid rgb(78, 114, 130);
-    border-radius: 10px;
-}
-</string>
-    </property>
-   </widget>
-   <widget class="QListView" name="quant_list">
-    <property name="geometry">
-     <rect>
-      <x>580</x>
-      <y>180</y>
-      <width>171</width>
-      <height>241</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QListView {
-    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
-    border: 2px solid rgb(78, 114, 130);
-    border-radius: 10px;
-}
-</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="add_rm_pb">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>510</y>
+      <x>330</x>
+      <y>540</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -435,54 +505,11 @@ QPushButton:pressed {
      <string>Add Raw Material</string>
     </property>
    </widget>
-   <widget class="QLabel" name="Quant_label_1">
-    <property name="geometry">
-     <rect>
-      <x>590</x>
-      <y>150</y>
-      <width>161</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Display Semil</family>
-      <pointsize>14</pointsize>
-      <underline>false</underline>
-     </font>
-    </property>
-    <property name="text">
-     <string>Quantity(in kg/L) : </string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="name_label">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>150</y>
-      <width>421</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Display Semil</family>
-      <pointsize>14</pointsize>
-      <underline>false</underline>
-     </font>
-    </property>
-    <property name="text">
-     <string>Raw Material</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
    <widget class="QLabel" name="quant_label_2">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>450</y>
+      <x>460</x>
+      <y>480</y>
       <width>161</width>
       <height>31</height>
      </rect>
@@ -498,23 +525,28 @@ QPushButton:pressed {
      <string>Quantity(in kg/L) : </string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="quant_lineEdit">
+   <widget class="QComboBox" name="rm_comboBox">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>450</y>
-      <width>101</width>
+      <x>200</x>
+      <y>480</y>
+      <width>231</width>
       <height>31</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI Variable Small Light</family>
-      <pointsize>16</pointsize>
+      <family>Segoe UI Variable Display Semib</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
     <property name="styleSheet">
-     <string notr="true">QLineEdit {
+     <string notr="true">QComboBox {
     background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
     
     border: qlineargradient(spread: repeat, 
@@ -528,36 +560,8 @@ QPushButton:pressed {
     color: white;  
 }</string>
     </property>
-   </widget>
-   <widget class="QLineEdit" name="rm_lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>450</y>
-      <width>211</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Small Light</family>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit {
-    background: qlineargradient(spread:pad, x1:0.0157895, y1:0.603, x2:1, y2:0.591, stop:0 rgba(37, 134, 179, 255), stop:1 rgba(110, 165, 191, 255)); 
-    
-    border: qlineargradient(spread: repeat, 
-                            x1: 0, y1: 0.602, x2: 1, y2: 0.597, 
-                            stop: 0.0631579 rgba(0, 115, 168, 216), 
-                            stop: 0.752632 rgba(25, 116, 159, 199), 
-                            stop: 0.994737 rgba(49, 118, 150, 0)); 
-    
-    border-radius: 15px;
-    padding-left: 10px;
-    color: white;  
-}</string>
+    <property name="currentIndex">
+     <number>-1</number>
     </property>
    </widget>
   </widget>
@@ -566,7 +570,7 @@ QPushButton:pressed {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>852</width>
+     <width>812</width>
      <height>26</height>
     </rect>
    </property>
